--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,8 @@ path = "src/aoc2024/day1.rs"
 name = "day1_2"
 path = "src/aoc2024/day1_2.rs"
 
+[[bin]]
+name = "day2"
+path = "src/aoc2024/day2.rs"
+
 [dependencies]
