--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,13 @@ name = "day3_2"
 path = "src/aoc2024/day3_2.rs"
 
 [[bin]]
+name = "day4"
+path = "src/aoc2024/day4.rs"
+
+[[bin]]
 name = "day5"
 path = "src/aoc2024/day5.rs"
 
 [dependencies]
+colored = "2.1.0"
 regex = "1.11.1"
