--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,10 @@ path = "src/aoc2024/day6.rs"
 name = "day7"
 path = "src/aoc2024/day7.rs"
 
+[[bin]]
+name = "day8"
+path = "src/aoc2024/day8.rs"
+
 [dependencies]
 colored = "2.1.0"
 regex = "1.11.1"
